# akamai-functions-playground

./: .gitignore  README.md
.github/: cidr-calculator-url.json  time-teller-url.json  wasm-explained-url.json
.github/workflows/: delete-cidr-calculator.yml  delete-time-teller.yml  delete-wasm-explained.yml  deploy-cidr-calculator.yml  deploy-time-teller.yml  deploy-wasm-explained.yml  publish-time-teller.yml  publish-time-zone-clock.yml
cidr-calculator/: spin.toml
cidr-calculator/assets/: index.html
components/time-zone-clock/: Cargo.toml
components/time-zone-clock/src/: bindings.rs  lib.rs
components/time-zone-clock/wit/: world.wit
templates/http-rust-basic-auth/: README.md
templates/http-rust-basic-auth/content/: Cargo.toml.tmpl  spin.toml
templates/http-rust-basic-auth/content/src/: lib.rs
templates/http-rust-basic-auth/metadata/: spin-template.toml
time-teller/: Cargo.toml  README.md  spin.toml
time-teller/src/: bindings.rs  lib.rs
time-teller/wit/: world.wit
wasm-explained-static-content/: spin.toml
wasm-explained-static-content/assets/: index.html
