[package]
name = "time-teller"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = "5.2.0"
wit-bindgen-rt = { version = "0.41.0", features = ["bitflags"] }

[workspace]

[package.metadata.component]
package = "ram-pi:time-teller"

[package.metadata.component.target.dependencies]
"ram-pi:time-zone-clock" = { path = "../components/time-zone-clock/wit" }
