[package]
name = "time-zone-clock"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
description = "Timezone metadata for the time-teller Spin app"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = { version = "0.41.0", features = ["bitflags"] }

[package.metadata.component]
package = "ram-pi:time-zone-clock"
